--- a/frontend/src/styles/SingleRestaurant.css
+++ b/frontend/src/styles/SingleRestaurant.css
@@ -1,9 +1,9 @@
-.sr-img img{
+.sres-img img{
     width: 100%;
     height: 100%;
 }
 
-.sr-img{
+.sres-img{
     height: 14rem;
     width: 20.5rem;
 }
@@ -14,14 +14,14 @@
     
 }
 
-.sr-workingTime{
+.sres-workingTime{
     text-transform: uppercase;
     font-size: 0.9rem;
     color: gray;
     margin-top: 0.5rem;
 }
 
-.sr-name{
+.sres-name{
     width: 17rem;
     height: 2.7rem;
     font-family: 'Montserrat', sans-serif;
@@ -30,10 +30,13 @@
     font-size: 1.1rem;
 
 }
-.sr-container {
+.sres-container {
     display: flex;
   }
   
+.sres-cuisines{
+  height: 2.6rem;
+}
  
   
   .singlerestaurant:hover {
@@ -41,12 +44,13 @@
     background-color: #cfe6dc;
   }
   
-  .sr-container2{
+  .sres-container2{
     display: none;
   }
-  .sr-container2.visible{
+  .sres-container2.visible{
     display: block;
     position: absolute;
     background-color: #cfe6dc;
-    width: 100%;
+    width: 19rem;
+
   }
