--- a/frontend/src/styles/SingleRecipe.css
+++ b/frontend/src/styles/SingleRecipe.css
@@ -33,3 +33,9 @@ a{
     text-decoration: none;
     color: black;
 }
+
+.sr-container1{
+    display: flex;
+    justify-content: space-between;
+}
+
