--- a/frontend/src/styles/RecipeDetails.css
+++ b/frontend/src/styles/RecipeDetails.css
@@ -67,10 +67,11 @@
 }
 
 .rd-directions{
-    display: flex;
     height: auto;
     width: 100%;
     align-items: center;
+    font-family: 'Montserrat', sans-serif;
+
 }
 
 .rd-directions li{
