--- a/frontend/src/styles/AddRestaurant.css
+++ b/frontend/src/styles/AddRestaurant.css
@@ -36,6 +36,8 @@
    width: 27rem;
    height: 1.8rem;
    font-family: 'Montserrat', sans-serif;
+   border-radius: 5px;
+   border: 1px solid;
 
 }
 
